# Mcp-for-ClaudeSkills

./: .gitignore  pyproject.toml  skills.md
src/my_mcp_server/: __init__.py  server.py
